--- a/src/app/components/search-results/search-results.component.html
+++ b/src/app/components/search-results/search-results.component.html
@@ -11,4 +11,5 @@
   [pageSize]="pageSize"
   [collectionSize]="total"
   [maxSize]="paginationSize"
+  (pageChange)="setPage($event)"
 ></ngb-pagination>
