--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -13,6 +13,13 @@
   </div>
 </div>
 
-<gst-search-results *ngIf="!loading && gifs && gifs.length" [gifs]="gifs" [pagination]="!!query"></gst-search-results>
+<gst-search-results
+  *ngIf="!loading && gifs && gifs.length"
+  [gifs]="gifs"
+  [pagination]="!!query"
+  [(page)]="page"
+  (pageChange)="handlePageChange()"
+  [total]="total"
+></gst-search-results>
 
 <div *ngIf="!loading && gifs && !gifs.length" class="text-center">No GIFs found</div>
